2016-06-01 Fixed tests in Video module
2016-06-01 Fixed problem with setting poster on Firefox in Video module
2016-05-30 Fixed sending allOK event in Crossword module
2016-05-25 Added parsing for views of gaps in editor
2016-05-23 Fixed adding empty class to wrong element in Text Identification module
2016-05-23 Added playing event in Audio and Video modules
2016-05-18 Added reseting poster before adding new one in Video module
2016-05-18 Added showPopup and closePopup commands
2016-05-13 Added new addon Hierarchical Table of Contents
2016-05-13 Added User action events property in Text module
2016-05-10 Added class on hover in Image Identification module
2016-05-10 Fixed issue with indexing pages in DIsable Score Pages in HLR module
2016-05-09 Added show/hide commands in Text Identification module
2016-05-06 Fixed rendering LaTeX in draggable gaps in Text module
2016-05-05 Optimized state in IWB Toolbar
2016-05-04 Fixed setting popup position
2016-05-04 Added blocking wrong answers in Image Identification module
2016-05-04 Added new event to CrossWord adddon - CorrectWord
2016-04-26 Fixed issue with hide answers in Multiplegap module
2016-04-26 Fixed issue with sending event in Submit module
2016-04-25 Added blocking wrong answers in PlotsLines module
2016-04-25 Fixed issue with non displaying coordinations in PointsLines module
2016-04-25 Added blocking wrong answers in MultipleGap module
2016-04-22 Added blocking wrong answers for editable gaps in Text module
2016-04-22 Fixed tests in Crossword module
2016-04-21 Added Color correct property in Coloring module
2016-04-19 Added blocking wrong answers in Crossword module
2016-04-19 Fixed memory leaks in IWB_Toolbar module and added destroy method to zoom.js
2016-04-19 Added property weight to page
2016-04-18 Added blocking wrong answers in Image Gap module
2016-04-18 Added blocking wrong answers in Connection module
2016-04-14 Added blocking wrong answers in Text Identification module